--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
@@ -45,7 +45,7 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-clock-o"></i>
                                     </div>
-                                    <input type="text" class="form-control pull-right" id="reservation" value="@Html.Raw(Model.StartTime)">
+                                    <input type="text" class="form-control pull-right" id="startEndTime" value="@Html.Raw(Model.StartTime)">
                                 </div>
                             </div>
 
