--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
@@ -3,8 +3,6 @@
     ViewBag.Title = "Manage Session";
 }
 
-@using HmsService.Models.Entities;
-@model Session
 
 <div class="container">
 
@@ -18,6 +16,7 @@
                 </button>
             </div>
 
+            <!--Modal Add Session-->
             <div class="modal fade" id="addSessionModal" role="dialog">
                 <div class="modal-dialog">
 
@@ -34,7 +33,7 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-briefcase" aria-hidden="true"></i>
                                     </div>
-                                    <input type="text" class="form-control" placeholder="Enter Speaker's name">
+                                    <input id="txtNameAdd" type="text" class="form-control" placeholder="Enter Session's name">
                                 </div>
                             </div>
 
@@ -45,7 +44,7 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-clock-o"></i>
                                     </div>
-                                    <input type="text" class="form-control pull-right" id="startEndTime" value="@Html.Raw(Model.StartTime)">
+                                    <input type="text" class="form-control pull-right" id="startEndTimeAdd" value="">
                                 </div>
                             </div>
 
@@ -55,13 +54,13 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-info" aria-hidden="true"></i>
                                     </div>
-                                    <input type="text" class="form-control" placeholder="Enter Description">
+                                    <input id="txtDescriptionAdd" type="text" class="form-control" placeholder="Enter Description">
                                 </div>
                             </div>
 
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-primary">Add</button>
+                            <button id="btn-add-session" type="button" class="btn btn-primary" data-dismiss="modal">Add</button>
                             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                         </div>
                     </div>
@@ -84,7 +83,7 @@
 </div>
 
 
-<!-- Modal -->
+<!-- Modal Update Session -->
 <div id="modalUpdateSession" class="modal fade" role="dialog">
     <div class="modal-dialog modal-lg">
 
@@ -114,7 +113,7 @@
                         <div class="input-group-addon">
                             <i class="fa fa-briefcase" aria-hidden="true"></i>
                         </div>
-                        <input id="startEndTime" type="text" class="form-control" placeholder="Enter Session's name">
+                        <input id="startEndTimeUpdate" type="text" class="form-control" placeholder="Enter Session's name">
                     </div>
                 </div>
                 <div class="form-group">
@@ -176,15 +175,23 @@
 
 
             //Date range picker
-            //$('#startEndTime').daterangepicker();
+            $('#startEndTimeAdd').daterangepicker({
+                locale: {
+                    format: 'DD/MM/YYYY'
+                }
+            });
 
 
             //Save update session
-            $('#btn-update-session').on('click', function () {     
-                var time = $('#startEndTime').val();
+            $('#btn-update-session').on('click', function () {
+                var time = $('#startEndTimeUpdate').val();
                 var timeSplit = time.split('-');
-                var startTime = timeSplit[0].trim();
-                var endTime = timeSplit[1].trim()
+                var startTimeTmp = timeSplit[0].trim();
+                var endTimeTmp = timeSplit[1].trim();
+
+                var startTime = startTimeTmp.split("/").reverse().join("-");
+                var endTime = endTimeTmp.split("/").reverse().join("-");
+
                 $.ajax({
                     url: 'api/session/UpdateSession',
                     method: "POST",
@@ -196,7 +203,7 @@
                         EndTime: endTime
                     },
                     success: function (data) {
-                        $('#tblSession').DataTable().ajax.reload();
+                        reloadTable();
                     },
                     error: function (data) {
                         console.log(data);
@@ -204,20 +211,43 @@
                 });
             });
 
+            //Add Session
+            $('#btn-add-session').on('click', function () {
+                var sessionName = $('#txtNameAdd').val();
+                var sessionDescription = $('#txtDescriptionAdd').val();
+                var startEndTime = $('#startEndTimeAdd').val();
+                var timeSplit = startEndTime.split('-');
+                var startTime = timeSplit[0].trim().split("/").reverse().join("-");
+                var endTime = timeSplit[1].trim().split("/").reverse().join("-");
 
-            //Delete session
-            $('.btn-delete').click(function () {
-                console.log("AA");
+                $.ajax({
+                    url: 'api/session/AddSession',
+                    method: "POST",
+                    data: {
+                        EventId: 1,
+                        Name: sessionName,
+                        Description: sessionDescription,
+                        StartTime: startTime,
+                        EndTime: endTime
+                    },
+                    success: function (data) {
+                        reloadTable();
+                    },
+                    error: function (data) {
+                        console.log(data);
+                    }
+                });
             });
+
         });
 
 
         function openModelUpdate(id,name, startTime, endTime, description) {
             $('#sessionName').val(name);
             $('#sessionDescription').val(description);
-            $('#startEndTime').val(startTime + " - " + endTime);
+            $('#startEndTimeUpdate').val(startTime + " - " + endTime);
             $('#txtSessionId').val(id);
-            $('#startEndTime').daterangepicker({
+            $('#startEndTimeUpdate').daterangepicker({
                 locale: {
                     format: 'DD/MM/YYYY'
                 }
@@ -236,7 +266,7 @@
                 cancelButtonText: "No, cancel plx!",
                 closeOnConfirm: false
             },
-                function (isConfirm) {
+                function () {
                     $.ajax({
                         url: 'api/session/DeleteSession',
                         method: "POST",
