--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Session/Index.cshtml
@@ -176,7 +176,7 @@
 
 
             //Date range picker
-            //$('#startEndTime').daterangepicker();
+            $('#startEndTime').daterangepicker();
 
 
             //Save update session
