--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Timeline/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Timeline/Index.cshtml
@@ -52,6 +52,19 @@
                 </div>
             </div>
         </div>
+
+        <div class="ibox-content">
+            <table class="table table-hover table-bordered" id="tblTimeline">
+                <thead>
+                    <tr>
+                        <th>Timeline Title</th>
+                        <th>Timeline Detail</th>
+                        <th>Start Time</th>
+                        <th>Function</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
     </div>
 </div>
 
