--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
     <!--Custom Css-->
     <link rel="stylesheet" href="~/Content/CustomCss/admin.css">
     <link rel="stylesheet" href="~/Content/CustomCss/sponsor.css">
+    <link rel="stylesheet" href="~/Content/CustomCss/voting.css">
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -408,7 +409,7 @@
                     <li><a href="@Url.Action("Index","Home")"><i class="icon-home"></i> <span>Home</span></a></li>
                     <li><a href="@Url.Action("Index","Timeline")"><i class="icon-form"></i> <span>Timeline</span></a></li>
                     <li><a><i class="fa fa-question-circle"></i> <span>Q&A</span></a></li>
-                    <li><a><i class="fa fa-check-circle-o"></i> <span>Voting</span></a></li>
+                    <li><a href="@Url.Action("Index","Voting")"><i class="fa fa-check-circle-o"></i> <span>Voting</span></a></li>
                     <li><a href="@Url.Action("Index","Interaction")"><i class="fa fa-check-circle-o"></i> <span>Interaction</span></a></li>
                     <li><a href="@Url.Action("Index","Activity")"><i class="fa fa-rocket" aria-hidden="true"></i><span>Activity</span></a></li>
                     <li><a href="@Url.Action("Index","Session")"><i class="fa fa-calendar" aria-hidden="true"></i><span>Session</span></a></li>
