--- a/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Speaker/Index.cshtml
+++ b/Capstone-Project-EIP/CapstoneProjectAdmin/Views/Speaker/Index.cshtml
@@ -55,14 +55,13 @@
                                     <div class="input-group-addon">
                                         <i class="fa fa-link" aria-hidden="true"></i>
                                     </div>
-                                    <input id="newImageUrl" type="text" class="form-control" placeholder="Input image url">
+                                    <textarea id="newImageUrl" type="text" class="form-control" placeholder="Input image url"></textarea>
                                 </div>
                                 <div class="col-sm-3"></div>
                                 <div class="row col-sm-9">
                                     <label>or</label>
                                     <input type="file" id="myFile">
                                 </div>
-
                             </div>
                         </div>
                         <div class="modal-footer">
@@ -165,7 +164,6 @@
             $('.speaker-description').val(description);
             $('.speaker-image').val(image);
             $('.speaker-id').val(id); 
-
         }
 
          function delSpeaker(id, name) {
